[gd_scene load_steps=11 format=3 uid="uid://qahwxyldgpk7"]

[ext_resource type="Texture2D" uid="uid://c2miyaeeddq6a" path="res://assets/art/characters/standing_plant_enemy.png" id="1_o2lhx"]
[ext_resource type="Script" path="res://characters/standing_plant_enemy.gd" id="1_uth01"]
[ext_resource type="PackedScene" uid="uid://csisfys2gknmj" path="res://characters/hurtbox.tscn" id="2_syxvj"]
[ext_resource type="PackedScene" uid="uid://bxggdwfegxfie" path="res://characters/hitbox.tscn" id="3_ew4lw"]
[ext_resource type="PackedScene" uid="uid://dcfu0p2itvvs3" path="res://characters/character_stats.tscn" id="4_flw4s"]

[sub_resource type="Animation" id="Animation_awieq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6n464"]
resource_name = "attack"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 4, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire_bullet"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eoxvx"]
_data = {
"RESET": SubResource("Animation_awieq"),
"attack": SubResource("Animation_6n464")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_atip3"]
size = Vector2(12, 32)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_avhgf"]
radius = 4.0
height = 24.0

[node name="standing_plant_enemy" type="Node2D"]
script = ExtResource("1_uth01")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_o2lhx")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eoxvx")
}
autoplay = "attack"

[node name="bullet_spawn_point" type="Marker2D" parent="."]
position = Vector2(8, -24)

[node name="fire_direction" type="Marker2D" parent="."]
position = Vector2(16, -24)

[node name="hurtbox" parent="." instance=ExtResource("2_syxvj")]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_atip3")

[node name="hitbox" parent="." instance=ExtResource("3_ew4lw")]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -16)
shape = SubResource("CapsuleShape2D_avhgf")

[node name="character_stats" parent="." instance=ExtResource("4_flw4s")]

[connection signal="hurt" from="hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="no_health" from="character_stats" to="." method="_on_character_stats_no_health"]
